examples/test/testpolicy12348.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12348
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key9: value33
      key3: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value39
          key4: value0
      podSelector:
        matchLabels:
          key1: value10
